[package]
name = "minecraft_model"
version = "0.1.0"
edition = "2021"

[[example]]
name = "demo"
path = "example/demo.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.0"
anyhow = "1.0"
model_merge = { path = "crates/model_merge" }
model_merge_derive = { path = "crates/model_merge_derive" }
